--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2599,7 +2599,7 @@ input, select, textarea {
 
 			.features li:before {
 				display: block;
-				color: #00ffcc;
+				/* color: #00ffcc; */
 				position: absolute;
 				left: 1.75em;
 				top: 2.75em;
