--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2554,10 +2554,10 @@ input, select, textarea {
 			display: block;
 			position: relative;
 			text-align: left;
-			width: 50%;
+			/* width: 50%; */
 		}
 
-			.features li:nth-child(1) {
+			/* .features li:nth-child(1) {
 				background-color: rgba(0, 0, 0, 0.035);
 			}
 
@@ -2595,15 +2595,15 @@ input, select, textarea {
 
 			.features li:nth-child(10) {
 				background-color: rgba(0, 0, 0, 0.35);
-			}
+			} */
 
 			.features li:before {
 				display: block;
 				/* color: #00ffcc; */
-				position: absolute;
+				/* position: absolute; */
 				left: 1.75em;
 				top: 2.75em;
-				font-size: 1.5em;
+				font-size: 2.5em;
 			}
 
 			.features li:nth-child(1) {
@@ -2736,6 +2736,33 @@ input, select, textarea {
 		.spotlight:nth-child(10) {
 			background-color: rgba(0, 0, 0, 0.75);
 		}
+			/* .spotlight:nth-child(11) {
+			background-color: rgba(0, 0, 0, 0.075);
+		}
+
+		.spotlight:nth-child(12) {
+			background-color: rgba(0, 0, 0, 0.15);
+		}
+
+		.spotlight:nth-child(13) {
+			background-color: rgba(0, 0, 0, 0.225);
+		}
+
+		.spotlight:nth-child(14) {
+			background-color: rgba(0, 0, 0, 0.3);
+		}
+
+		.spotlight:nth-child(15) {
+			background-color: rgba(0, 0, 0, 0.375);
+		}
+
+		.spotlight:nth-child(16) {
+			background-color: rgba(0, 0, 0, 0.45);
+		}
+
+		.spotlight:nth-child(17) {
+			background-color: rgba(0, 0, 0, 0.525);
+		} */
 
 		@media screen and (max-width: 1280px) {
 
