--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2603,7 +2603,7 @@ input, select, textarea {
 				/* position: absolute; */
 				left: 1.75em;
 				top: 2.75em;
-				font-size: 2.5em;
+				font-size: 3.5em;
 			}
 
 			.features li:nth-child(1) {
@@ -3005,7 +3005,8 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
+			/* background-color: #505393; */
+			background-color: white;
 			color: #d3d4e4;
 		}
 
@@ -3013,7 +3014,10 @@ input, select, textarea {
 				color: #ffffff;
 			}
 
-			.wrapper.style3 h2, .wrapper.style3 h3, .wrapper.style3 h4, .wrapper.style3 h5, .wrapper.style3 h6 {
+			/* .wrapper.style3 h2, .wrapper.style3 h3, .wrapper.style3 h4, .wrapper.style3 h5, .wrapper.style3 h6 {
+				color: #ffffff;
+			} */
+			.wrapper.style3 h3, .wrapper.style3 h4, .wrapper.style3 h5, .wrapper.style3 h6 {
 				color: #ffffff;
 			}
 
@@ -4035,4 +4039,22 @@ input, select, textarea {
 
 	.email:hover{
 		text-decoration: underline;
+	}
+
+	.redux-logo{
+		border-radius: 4px;
+    display: inline-block;
+    line-height: 8em;
+    margin: 0;
+    text-align: center;
+    width: 8em;
+    object-fit: contain;
+	}
+
+	.major .skills{
+		color: black;
+	}
+
+	.devicon-express-original-wordmark{
+		color: black;
 	}
